# 68k-nano

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_cmake.sh
board/68000sbc/: 68000sbc.kicad_pcb  68000sbc.kicad_prl  68000sbc.kicad_pro  68000sbc.kicad_sch
script/: serload.py
src/: cf.c  cf.h  sleep.c  sleep.h  test.c  type.h  uart.c  uart.h
src/cf_fat/: mem-cf.c  mem-cf.h  mem-ffs.c  mem-ffs.h
toolchain/: TC-68k-nano.cmake  link.ld
toolchain/docker/: Dockerfile
toolchain/script/: build_docker.sh  m68k-elf-ar.py  m68k-elf-gcc.py  m68k-elf-ranlib.py  m68k-tools.py
